refactor appConfig to DI provider

--- a/Baggie/Baggie.fsproj
+++ b/Baggie/Baggie.fsproj
@@ -10,6 +10,7 @@
       <Content Include="AppSettings.json">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <Compile Include="Providers.fs" />
       <Compile Include="AppSettings.fs" />
       <Compile Include="Baggie.fs" />
       <Compile Include="Program.fs" />
