move default token path to .config/baggie.tok

--- a/Baggie/AppSettings.json
+++ b/Baggie/AppSettings.json
@@ -1,4 +1,4 @@
 {
-  "discord.tokenpath": "/home/gctypo/baggie.tok"
+  "discord.tokenpath": "/home/gctypo/.config/baggie.tok"
   , "baggie.timeoutSec": 20
 }
