add fake providers for time and config

--- a/Baggie.Test/Baggie.Test.fsproj
+++ b/Baggie.Test/Baggie.Test.fsproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="FakeProviders.fs" />
         <Compile Include="Baggie.Test.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
