--- a/Baggie.Test/Baggie.Test.fsproj
+++ b/Baggie.Test/Baggie.Test.fsproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <Compile Include="FakeProviders.fs" />
         <Compile Include="Baggie.Test.fs" />
+        <Compile Include="Program.Test.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
