refactor CommandContext dependence to adapter

--- a/Baggie/Baggie.fsproj
+++ b/Baggie/Baggie.fsproj
@@ -12,6 +12,7 @@
       </Content>
       <Compile Include="Providers.fs" />
       <Compile Include="AppSettings.fs" />
+      <Compile Include="ContextAdapter.fs" />
       <Compile Include="Baggie.fs" />
       <Compile Include="Program.fs" />
     </ItemGroup>
